crates/astra-cli/src/tui/history_cell/snapshots/astra__tui__history_cell__approval__tests__approval_card_160.snap
---
source: crates/astra-cli/src/tui/history_cell/approval.rs
assertion_line: 1088
expression: "render_at(&fixture_full(), 160)"
---
╭─ Approval · Bash
│ npm test --filter auth
│ npm test --filter auth -- --verbose
│ Needs approval before it runs.
│ Remember · similar `npm test` commands in this workspace
│
│  Yes   Yes, and don't ask again   No
╰─ ←→ move · Enter select · Ctrl+D reject
