crates/astra-cli/src/tui/history_cell/snapshots/astra__tui__history_cell__approval__tests__approval_card_agent_and_host_80.snap
---
source: crates/astra-cli/src/tui/history_cell/approval.rs
assertion_line: 1101
expression: "render_at(&cell, 80)"
---
╭─ Approval · Bash · agent review-subagent · ssh:bastion-prod
│ npm test --filter auth
│ npm test --filter auth -- --verbose
│ Needs approval before it runs.
│ Remember · similar `npm test` commands in this workspace
│ Can't remember · sub-agent request
│
│  Yes   Yes, and don't ask again   No
╰─ ←→ move · Enter select · Ctrl+D reject
