crates/astra-cli/src/tui/history_cell/snapshots/astra__tui__history_cell__approval__tests__approval_card_destructive_80.snap
---
source: crates/astra-cli/src/tui/history_cell/approval.rs
assertion_line: 1123
expression: "render_at(&cell, 80)"
---
╭─ Approval · Edit File
│ edit /etc/hosts
│ Risk · Outside workspace · Sensitive file
│ /etc/hosts
│ writes outside workspace
│ Can't remember · outside workspace
│
│  Yes   Yes, and don't ask again   No
╰─ ←→ move · Enter select · Ctrl+D reject
